src/test/deca/context/invalid/Objet/Redeclaration-Field2.deca
// Description:
//      Declaring two fields with same ident
//
// Results:
//      Line 11 : Rule (2.4) Identifier already used
//
// History:
//      created on 17/1/2022

class A{
    int x, x;
    void y() {
    }
}
